Change background color, fix nav to top, add .jumbotron.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <header class="page-header bg-info">
-        <h2><a class="pull-left" href="index.html">Iceland!</a></h2>
+      <div class="navbar-fixed-top bg-info">
+        <h3><a class="pull-left" href="index.html">Home</a></h3>
           <ul class="nav nav-pills pull-right">
             <!-- <div class="navbar" data-toggle="collapse" data-target=".navbar-collapse"> -->
               <li><a href="#">About</a></li>
@@ -23,8 +23,16 @@
               <li><a href="#">Culture</a></li>
           </ul>
             <!-- </div> closes .navbar-->
-      </header>
-
+      </div>
+      <div>
+        <img src="img/iceland1.jpg" alt="Iceland water">
+      </div>
+      <div class="intro jumbotron">
+        <h1>Visit Iceland</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+      </div>
+        </p>
       <div class="row">
         <div class="columns col-md-4">
           <h3>Column 1!</h3>
@@ -35,13 +43,13 @@
         <div class="columns col-md-4">
           <h3>Column 2!</h3>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             </p>
         </div>
         <div class="columns col-md-4">
           <h3>Column 3!</h3>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
         </div>
       </div>
