Add carousel slide show with indicators.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
 
 <!--======================== Carousel =========================-->
 
+    <div id="myCarousel" class="carousel slide">
+      <div class="container">
+
+        <ol class="carousel-indicators">
+          <li class="active" data-target="#myCarousel" data-slide-to="0"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+          <div class="carousel-inner">
+
+            <div class="item active">
+              <img id="slide" src="img/iceland1.jpg" alt="Iceland water">
+            </div>
+
+            <div class="item">
+              <img id="slide" src="img/iceland2.jpg">
+            </div>
+
+            <div class="item">
+              <img id="slide" src="img/iceland3.jpg">
+            </div>
+
+          </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="icon-prev"></span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="icon-next"></span>
+      </a>
+    </div>
+
 <!--======================== End Carousel =========================-->
 
     <div class="container">
@@ -35,9 +68,6 @@
           </ul>
             <!-- </div> closes .navbar-->
       </div>
-      <div>
-        <img src="img/iceland1.jpg" alt="Iceland water">
-      </div>
       <div class="intro jumbotron">
         <h1>Visit Iceland</h1>
         <p>
@@ -45,19 +75,19 @@
       </div>
         </p>
       <div class="row">
-        <div class="columns col-md-4">
+        <div class="columns col-lg-4">
           <h3>Column 1!</h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
         </div>
-        <div class="columns col-md-4">
+        <div class="columns col-lg-4">
           <h3>Column 2!</h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             </p>
         </div>
-        <div class="columns col-md-4">
+        <div class="columns col-lg-4">
           <h3>Column 3!</h3>
             <p>
               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
